--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -338,10 +338,10 @@ Selected variable settings from [[https://github.com/angrybacon/dotemacs][Mathie
               x-stretch-cursor t)                    ; Stretch cursor to the glyph width
 #+END_SRC
 
-** setq :TODO:
-TODO https://stackoverflow.com/questions/53769315/emacs-ess-indent-after
+** setq
+~gc-cons-threshold~ is a [[https://github.com/daviwil][David Wilson]] trick: "Make gc pauses faster by decreasing the threshold." David's figure was modified in concordance with the config of [[https://github.com/angrybacon/dotemacs][Mathieu Marques]].
 
-A [[https://github.com/daviwil][David Wilson]] trick: "Make gc pauses faster by decreasing the threshold." David's figure was modified in concordance with the config of [[https://github.com/angrybacon/dotemacs][Mathieu Marques]].
+I'm still experimenting with the ess variables; [[https://stackoverflow.com/questions/53769315/emacs-ess-indent-after][explanation here]].
 
 #+BEGIN_SRC emacs-lisp
 (setq doom-theme 'doom-one
@@ -351,9 +351,13 @@ A [[https://github.com/daviwil][David Wilson]] trick: "Make gc pauses faster by 
       gc-cons-threshold (* 8 1024 1024)
       auto-save-default t
       make-backup-files t
-      ess-indent-offset 2
       confirm-kill-emacs nil
+      ;; ess-offset-continued '(straight 4)        ;; indent after pipe, etc
+      ess-indent-offset 4                       ;; indent all lines
       undo-limit 80000000
+      truncate-string-ellipsis "…"                ; Unicode ellispis are nicer than "...", and also save /precious/ space
+      password-cache-expiry nil                   ; I can trust my computers ... can't I?
+      evil-want-fine-undo t                       ; By default while in insert all changes are one big blob. Be more granular
       tab-line-mode t)
 #+END_SRC
 
@@ -365,6 +369,9 @@ A [[https://github.com/daviwil][David Wilson]] trick: "Make gc pauses faster by 
 (put 'downcase-region 'disabled nil)    ; Enable downcase-region C-x C-l
 (put 'upcase-region 'disabled nil)      ; Enable upcase-region C-x C-u
 (set-default-coding-systems 'utf-8)     ; Default to utf-8 encoding
+(display-time-mode 1)                             ; Enable time in the mode-line
+(unless (string-match-p "^Power N/A" (battery))   ; On laptops...
+  (display-battery-mode 1))                       ; it's nice to know how much power you have
 #+END_SRC
 
 * Font
@@ -392,6 +399,19 @@ I can't customize doom-big-font 😭
 (custom-set-faces!
   '(font-lock-comment-face :slant italic)
   '(font-lock-keyword-face :slant italic))
+#+END_SRC
+
+* Fullscreen
+Increases the robustness of the fullscreen setting across various DEs/WMs.
+Some window managers may not understand/work with =maximized= (or may not produce the desired effect), in that case try ~fullboth~ or ~fullscreen~.
+[[https://emacs.stackexchange.com/questions/2999/how-to-maximize-my-emacs-frame-on-start-up][Here is more info.]]
+
+#+BEGIN_SRC emacs-lisp
+(pcase window-system
+  ('w32 (set-frame-parameter nil 'fullscreen 'fullboth))
+  (_ (set-frame-parameter nil 'fullscreen 'maximized)))
+
+;; (add-to-list 'initial-frame-alist '(fullscreen . maximized))
 #+END_SRC
 
 * Mappings
@@ -488,4 +508,112 @@ This code block is essential to getting Gmail to work with =mu4e=.
 ;; (put 'add-function 'lisp-indent-function 4)
 ;; (put 'advice-add 'lisp-indent-function 4)
 ;; (put 'plist-put 'lisp-indent-function 4)
+#+END_SRC
+
+* =org=
+
+TODO: is this an alternative to org-agenda-files or is it deprecated?
+(setq +org-capture-todo-file "tasks.org")
+
+some alternatives (deprecated?) if scroll-down-aggressively is bad
+  (setq comint-prompt-read-only t)
+  (setq comint-scroll-to-bottom-on-input t)
+  (setq comint-scroll-to-bottom-on-output t)
+  (setq comint-move-point-for-output t)
+
+
+
+#+BEGIN_SRC emacs-lisp
+
+(setq org-babel-default-header-args:R '((:session)
+                                        (:results . "output")))
+(setq scroll-down-aggressively 0.01)
+
+(setq org-directory "~/Documents/org/"
+
+      ;; org-agenda-files (directory-files-recursively "~/Documents/org/" "\.org$")  ;; make everything an agenda file
+      org-agenda-files '("~/Documents/org/remind.org")
+      ;; overview         top-level headlines only
+      ;; content          all headlines
+      ;; showall          no folding of any entries
+      ;; showeverything   show even drawer contents
+      org-startup-folded t
+      org-link-search-must-match-exact-headline nil     ;; target words with a link
+      org-highest-priority ?A
+      org-default-priority ?B
+      org-lowest-priority ?C                            ;; does this really have to be ?E by default?
+      org-ellipsis " ▾ "
+      org-bullets-bullet-list '("·")
+      org-tags-column -80
+      org-agenda-files (ignore-errors (directory-files +org-dir t "\\.org$" t))
+      org-log-done 'time
+      org-refile-targets (quote ((nil :maxlevel . 1)))
+      org-tags-column -80
+      org-agenda-skip-scheduled-if-done t
+      org-priority-faces '((65 :foreground "#e45649")   ;; 65 in ASCII is A, etc or type ?A, ?B, etc
+                           (66 :foreground "#da8548")
+                           (67 :foreground "#0098dd"))
+      org-capture-templates '(("x" "Note" entry
+                               (file+olp+datetree "journal.org")
+                               "**** [ ] %U %?" :prepend t :kill-buffer t)
+                              ("t" "Task" entry
+                               (file+headline "tasks.org" "Inbox")
+                               "* [ ] %?\n%i" :prepend t :kill-buffer t)))
+
+
+
+
+;; (add-hook! 'org-mode-hook #'+org-pretty-mode #'mixed-pitch-mode)  ;;  i don't like this
+(add-hook! 'org-mode-hook (company-mode -1))
+(add-hook! 'org-capture-mode-hook (company-mode -1))
+
+
+
+
+(set-popup-rule! "^\\*Org Agenda" :side 'bottom :size 0.90 :select t :ttl nil)
+(set-popup-rule! "^CAPTURE.*\\.org$" :side 'bottom :size 0.90 :select t :ttl nil)
+
+
+
+
+(after! org
+  (set-face-attribute 'org-link nil
+                      :weight 'normal
+                      :background nil)
+  (set-face-attribute 'org-code nil
+                      :foreground "#a9a1e1"
+                      :background nil)
+  (set-face-attribute 'org-date nil
+                      :foreground "#5B6268"
+                      :background nil)
+  (set-face-attribute 'org-level-1 nil
+                      :foreground "steelblue2"
+                      :background nil
+                      :height 1.2
+                      :weight 'normal)
+  (set-face-attribute 'org-level-2 nil
+                      :foreground "slategray2"
+                      :background nil
+                      :height 1.0
+                      :weight 'normal)
+  (set-face-attribute 'org-level-3 nil
+                      :foreground "SkyBlue2"
+                      :background nil
+                      :height 1.0
+                      :weight 'normal)
+  (set-face-attribute 'org-level-4 nil
+                      :foreground "DodgerBlue2"
+                      :background nil
+                      :height 1.0
+                      :weight 'normal)
+  (set-face-attribute 'org-level-5 nil
+                      :weight 'normal)
+  (set-face-attribute 'org-level-6 nil
+                      :weight 'normal)
+  (set-face-attribute 'org-document-title nil
+                      :foreground "SlateGray1"
+                      :background nil
+                      :height 1.75
+                      :weight 'bold)
+
 #+END_SRC
